name: yjslide
version: 0.1.0.0
license: BSD3
author: Yoshikuni Jujo
maintainer: yoshikuni.jujo@@snow.plala.or.jp
copyright: 2017 Yoshikuni Jujo
category: Lecture
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: .
    ghc-options: -fno-warn-tabs
    build-depends: base, xturtle, yjsvg
    default-language: Haskell2010

executable lecture01
    hs-source-dirs: .
    main-is: lecture01.hs
    other-modules: Lecture, Whats, WriteTree
    ghc-options: -fno-warn-tabs
    build-depends: base, xturtle, yjsvg, yjslide
    default-language: Haskell2010
